stats not working with buffered or resent messages